added mount script

--- a/doc/dpl/dpl1_utf8.tex
+++ b/doc/dpl/dpl1_utf8.tex
@@ -1,4 +1,3 @@
-\\
 \documentclass[utf8,usehyperref,12pt]{G7-32}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc} %% ваша любимая кодировка здесь
@@ -68,12 +67,12 @@
 
 
 
-\tableofcontents
+%\tableofcontents
 
 %\NormRefs % Нормативные ссылки 
-\Defines % Необходимые определения 
-СУБД -
-FUSE -
+%\Defines % Необходимые определения 
+%СУБД -
+%FUSE -
 
 
 \Introduction
@@ -82,8 +81,7 @@ placeholder
 
 \mainmatter %% это включает нумерацию глав и~секций в документе ниже
 
-\chapter{Обзор и техническое задание}
-
+\chapter{Постановка задачи}
 \section{Обзор особенностей заказчика}
 \subsection{Организационная структура}
 Санкт-петербургский городской дворец творчества юных(СпбГДТЮ) обладает большой и сложной организационной структурой, для каждого 
@@ -149,7 +147,7 @@ placeholder
 
 Таким образом система сетевого доступа к файлам должна быть максимально простой с точки зрения пользователя, использовать стандартизованные решения, реализации которых есть под все популярные операционные системы и быть открытым программным обеспечением.
 
-\subsection{Предположительные архитектурные решения и задачи информационной системы}
+\subsection{Предположительные архитектурные решения и задачи информационной системы}\label{ssect_arch_tasks}
 Исходя из положений раздела~\ref{ssect:tasks_infra} задачей хранилища данных является хранение файлов пользователей, дерева каталогов, информации о пользователях и их правах доступа. В процессе работы, пользователи будут использовать большое количество различных форматов файлов, поэтому представление файла в системе хранения должно быть максимально обобщённым. 
 
 Система ориентирована на пользователей с различным уровнем знакомства с информационными технологиями(раздел~\ref{ssect:restrict_infra}). Для минимизации риска утери данных при случайном удалении или перезаписи файлов требуется реализовать хранение истории версий таким образом, чтобы пользователь мог получить доступ к удалённому файлу или одной из предыдущих доступных версий. В то же время, для уменьшения обьёма данных хранящихся на жестком диске хранилища, требуется возможность окончательного удаления предыдущих версий файлов по прошествии определённого срока администратором системы.
@@ -167,11 +165,6 @@ placeholder
 Исходя из требований к системе, предлагается трёхзвенная архитектура: Клиент -- сервер приложений -- хранилище данных. Такая архитектура позволяет разделить логику работы клиент-серверной части и хранения файлов в хранилище данных. 
 
 \section{Обзор аналогов}
-\subsection{Samba}
-
-Samba — программа, которая позволяет обращаться к сетевым дискам на различных операционных системах по протоколу SMB/CIFS. 
-Имеет клиентскую и серверную части. Является свободным программным обеспечением, выпущена под лицензией GPL. Такая система удобна в использовании, предоставляет удобный доступ клиенту к файлам, не требует предварительной передачи на жёсткий диск пользователя. Минусами данного варианта реализации является ориентированность на работу в локальной сети, отсутствие версионности хранящихся файлов.
-
 \subsection{Системы управления версиями}
 Система управления версиями — программное обеспечение для облегчения работы с изменяющейся информацией. Система управления версиями позволяет хранить несколько версий одного и того же документа, при необходимости, возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение и многое другое.
 
@@ -180,16 +173,60 @@ Samba — программа, которая позволяет обращать
 Решение на основе git является наиболее безопасным, поскольку все данные передаются через шифрованное соединение, а аутентификация пользователя производится на основе криптографических ключей.
 
 \subsection{Системы электронного документооборота}
-Система документооборота, система электронного документооборота (СЭД) — автоматизированная многопользовательская система, сопровождающая процесс управления работой иерархической организации с целью обеспечения выполнения этой организацией своих функций. При этом предполагается, что процесс управления опирается на человеко-читаемые документы, содержащие в слабоформализованной форме инструкции для сотрудников организации, необходимые к исполнению.
+Система документооборота, система электронного документооборота (СЭД) — автоматизированная многопользовательская система, сопровождающая процесс управления работой иерархической организации с целью обеспечения выполнения этой организацией своих функций. При этом предполагается, что процесс управления опирается на человеко-читаемые документы, содержащие в слабо формализованной форме инструкции для сотрудников организации, необходимые к исполнению.
 
-Такие системы оориентированы на управление бизнес-процессами и оперируют понятием документа. Организовать в такой системе совместную работу над разнородными материалами, такими как методические пособия сложно, поскольку зачастую это может быть мультимедийная информация к обработке и хранению которой СЭД не приспособлены.
+Такие системы ориентированы на управление бизнес-процессами и оперируют понятием документа. Организовать в такой системе совместную работу над разнородными материалами, такими как методические пособия сложно, поскольку зачастую это может быть мультимедийная информация к обработке и хранению которой СЭД не приспособлены.
 
-\section{Формализация техического задания}
+\subsection{ownCloud}
+ownCloud - облачное хранилище данных позволяющее получать доступ к данным.
+
+Система поддерживает автоматическое резервное копирование, версионный контроль изменений и шифрование передачи данных. Доступ к хранилищу может быть обеспечен при помощи монтирования сетевого раздела, WebDAV, KDE KIO-Slaves, приложения для мобильных телефонов или через web-интерфейс. Данные также могут быть синхронизированы с локальной копией для последующего offline-использования. Исходные тексты системы распространяются в рамках лицензии AGPL.
+
+Эта система нацелена на личное использование и не обладает требуемыми в разделе~\ref{ssect:restrict_infra} возможностями по организации доступа к файлам различных подразделений и пользователей.
+
+\subsection{Выводы}
+
+Из рассмотренных аналогов, требованиям раздела~\ref{ssect_arch_tasks} полностью не соответствует ни один из пунктов. Системы контроля версий требуют значительной начальной подготовки пользователей для работы с такой системой. Системы электронного документооборота изначально не предназначены для хранения мультимедийной информации. ownCloud не позволяет управлять разделением прав доступа в объёме требуемом согласно~\ref{ssect_arch_tasks}.
+
+Таким образом для реализации поставленной задачи требуется разработать клиент-серверную систему, сочетающую в себе удобство доступа к файлам, широкие возможности по управлению правами доступа и управляемое версионное хранение файлов в хранилище.
+
+\section{Формализация технического задания}
 \subsection{Платформа}
 Исходя из ограничений описанных в разделе~\ref{ssect:restrict_infra} требуется использование исключительно свободного ПО для реализации системы хранения файлов. 
+
+Для работы системы используется операционная система GNU/Linux, в частности дистрибутив Ubuntu. Для работы системы на рабочем месте пользователя требуется наличие следующих библиотек:
+
+\begin{itemize}
+ \item neon - Библиотека реализующая протокол WebDAV на языке C. Лицензии: GPL, LGPL
+ \item expat - Библиотека для работы с XML документами. Лицензия: MIT.
+ \item fuse - Библиотека для разработки файловых систем в пространстве пользователя. Лицензия GPLv2.
+ \item glibc - стандартная библиотека языка C. Лицензии: GPL, LGPL.
+\end{itemize}
+
+Все указанные библиотеки распространяются под лицензиями одобренными организацией OSI. Такие лицензии позволяют неограниченное использование, распространение, изучение и модификацию исходных кодов.
+
 \subsection{Средства разработки}
 
-\subsection{Функциональные ограничения}
+Для разработки системы используются следующие программные продукты:
+\begin{itemize}
+ \item Eclipse -- свободная интегрированная среда разработки модульных кроссплатформенных приложений.
+ \item pydev -- модуль для разработки и отладки для языка Python.
+ \item CDT -- модуль для разработки и отладки для языков C и C++.
+ \item Visual Paradigm Community Edition -- средство проектирования UML диаграмм.
+ \item PostgreSQL -- свободная объектно-реляционная система управления базами данных (СУБД).  
+\end{itemize}
+
+Система основана на следующих открытых решениях:
+\begin{itemize}
+ \item pywebdav -- реализация WebDAV протокола на языке Python. Распространяется на условиях лицензии GPLv2.
+ \item davfs2 -- реализация доступа к хранилищу данных с использованием WebDAV протокола. Представляет собой реализацию файловой системы в пространстве пользователя. Распространяется на условиях лицензии GPLv2.
+\end{itemize}
+
+Использование готовых решений позволяет значительно сократить затраты на разработку и отладку и тестирование системы. Исходя из проектов взятых за основу, в работе используются языки C и Python. 
+
+Исходя из требований лицензии GPLv2 результат данной дипломной работы также распространяется по условиям лицензии GPLv2.
+
+\subsection{Функциональные требования}
 
 Требуется ведение журнала активности пользователей, включающего в себя информацию о следующих действиях: 
 \begin{itemize}
@@ -240,7 +277,9 @@ Samba — программа, которая позволяет обращать
 
 Хранилище данных решает задачу хранения пользовательских данных, файлов, дерева каталогов и вспомогательных сущностей.
 %\subsection{Описание задач решаемых отдельными компонентами}
-\subsection{Описание интерфейсов между компонентами}
+\subsection{Проектирование требований к физической и программной инфраструктуре}
+% список ПО на компах
+% для работы клиентского ПО требуется ....
 
 \section{Архитектура программы}
 \subsection{Архитектура БД}
@@ -271,9 +310,9 @@ Samba — программа, которая позволяет обращать
 
 При монтировании ФС, у пользователя запрашивают его логин/пароль для работы в системе, после этого сервер приложений проверяет правильность введённых данных и аутентифицирует его и возвращает содержимое корневой директории пользователя.
 
-При изменениии файла происходит блокировка ресурса на сервере приложений. Запись данных пользователем идёт в локальный кэш, который через некоторое время отправляется на сервер приложений. Использование кеширования позволяет уменьшить количество версий файлов, особенно для приложений в которых используется автосохранение файлов.
+При изменениии файла происходит блокировка ресурса на сервере приложений. Запись данных пользователем идёт в локальный кэш, который после закрытия файла отправляется на сервер приложений. Использование кеширования позволяет уменьшить количество версий файлов, особенно для приложений в которых используется автосохранение файлов.
 
-При отмонтировании происходит оттравка данных из кеша клиентской части на сервер приложений и отключение от сервера приложений.
+При отсоединении происходит отправка данных из кеша клиентской части на сервер приложений и отключение от сервера приложений.
 
 \subsection{Архитектура сервера приложений}
 
@@ -289,8 +328,24 @@ Samba — программа, которая позволяет обращать
 
 \section{Проектирование инфраструктуры}
 \subsection{Оценка требований к серверу}
+Основные характеристики и конфигурация сервера:
+\begin{itemize}
+ \item Платформа x86
+ \item Xeon 1.6 GHz
+ \item RAM 2 GB
+ \item Дисковый массив – 3 SATA диска объединенные в RAID 5, 3x400 GB
+\end{itemize}
+
 \subsection{Оценка требований к рабочему месту пользователя}
+Основные характеристики и конфигурация рабочего места пользователя:
+\begin{itemize}
+ \item Платформа x86
+ \item Intel Celeron 1.7 GHz
+ \item RAM 1 GB
+ \item Жёсткий диск - 80 Гб
+\end{itemize}
 \subsection{Оценка требований к пропускной способности канала}
+Для работы с сервером, клиенту требуется соединение с пропускной способностью 10 МБит/сек. Для сервера требуется соединение с пропускной способностью не менее 100 МБит/сек.
 
 \chapter{Реализация}
 \section{Особенности реализации БД}
